force-app/main/default/objects/Billing_Agreement__c/Billing_Agreement__c.object-meta.xml
<CustomObject>
    <description>Billing Agreements associated with Service Agreements</description>
    <label>Billing Agreement</label>
    <nameField>
        <label>Billing Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>