force-app/main/default/objects/Billing_Agreement__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>