force-app/main/default/objects/Billing_Agreement__c/fields/Audit_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Audit_User_Email__c</fullName>
    <label>Audit User Email</label>
    <type>Email</type>
</CustomField>