force-app/main/default/objects/Billing_Agreement__c/fields/Audit_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_User_ID__c</fullName>
    <label>Audit User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>