force-app/main/default/objects/Billing_Agreement__c/fields/Audit_User_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Audit_User_Last_Name__c</fullName>
    <label>Audit User Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>