force-app/main/default/objects/Billing_Agreement__c/fields/Audit_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Audit_User_Phone__c</fullName>
    <label>Audit User Phone</label>
    <type>Phone</type>
</CustomField>