force-app/main/default/objects/Billing_Agreement__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Agreements</relationshipLabel>
    <relationshipName>Billing_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>