force-app/main/default/objects/Billing_Agreement__c/fields/Billing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_2__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Line 2</label>
    <type>Text</type>
</CustomField>