force-app/main/default/objects/Billing_Agreement__c/fields/Billing_Agreement_GUID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Agreement_GUID__c</fullName>
    <externalId>true</externalId>
    <label>Billing Agreement GUID</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>