force-app/main/default/objects/Billing_Agreement__c/fields/Billing_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Agreement_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Billing Agreement ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>