force-app/main/default/objects/Billing_Agreement__c/fields/Billing_External_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_External_ID_2__c</fullName>
    <externalId>true</externalId>
    <label>Billing External ID 2</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>