force-app/main/default/objects/Billing_Agreement__c/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <formula>Bill_to_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Zip</label>
    <type>Text</type>
</CustomField>