force-app/main/default/objects/Billing_Agreement__c/fields/Next_Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Start_Date__c</fullName>
    <label>Next Billing Start Date</label>
    <type>Date</type>
</CustomField>