force-app/main/default/objects/Billing_Agreement__c/fields/Parent_Billing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Billing Agreement</description>
    <label>Parent Billing Agreement</label>
    <referenceTo>Billing_Agreement__c</referenceTo>
    <relationshipLabel>Billing Agreements</relationshipLabel>
    <relationshipName>Billing_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>