force-app/main/default/objects/Billing_Agreement__c/fields/Ready_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Invoice</label>
    <type>Checkbox</type>
</CustomField>