force-app/main/default/objects/Billing_Agreement__c/fields/Rollup_Like_Items__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Like_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollup Like Items</label>
    <type>Checkbox</type>
</CustomField>