force-app/main/default/objects/Billing_Agreement__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <label>Service Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Billing Agreements</relationshipLabel>
    <relationshipName>Billing_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>