force-app/main/default/objects/Billing_Agreement__c/fields/Sync_With_CallRevu_360__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_CallRevu_360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync With CallRevu 360</label>
    <type>Checkbox</type>
</CustomField>